Screen recorder chat application/objects/Screen_Recorder_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>field_Value__c</fullName>
        <label>field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSFDC</label>
        <type>Checkbox</type>
    </fields>
    <label>Screen Recorder Settings</label>
</CustomObject>